--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <p>nous vous apprenons à changer le</p>
                     <p>Monde avec votre créactivité</p>
                     <button class="button-link">
-                        <a href="#tabsec1">Nous contacter</a>
+                        <a href="contact.html">Nous contacter</a>
                     </button>
                 </div>
             </section>
