--- a/cours.html
+++ b/cours.html
@@ -68,19 +68,18 @@
         </div>
     </section>
 
-    <section class="home-comm">
+    <section class="cours-abon">
         <div class="left">
-            <h4>Abonnez vous à lq boite aux lettres</h4>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia eaque cumque, a, velit natus hic fuga molestiae ullam culpa eveniet enim, voluptates ipsa itaque vero nesciunt nihil omnis maxime ut.</p>
+            <h4>Abonnez vous à la boite <br> aux lettres</h4>
+            <p>Lorem ipsum dolor sit amet consectetur Eos adipisicing elit. <br> Officia eaque cumque, a, velit natus hic fuga molestiae ullam<br>culpa eveniet enim, voluptates ipsa itaque vero nesciunt <br>
+                 nihil omnis maxime ut.</p>
         </div>
         <div class="right">
             <div class="form-cours">
-            <form>
-                <input type="text" placeholder="Adresse Mail">
-                <button class="button-link form_btn">
-                    <a href="#">S'abonner</a>
-                </button>
-            </form>
+                <form>
+                    <input type="text" placeholder="Adresse emeil">
+                    <input type="submit" value="S'abonnez" id="btn-form">
+                </form>
             </div>
         </div>
     </section>
