--- a/index.html
+++ b/index.html
@@ -37,11 +37,11 @@
                     <img src="images/logo-trans_copy.png">
                 </div>
                 <div class="right">
-                    <h4>vous avez droit à apprendre</h4>
-                    <p>ce curriculum vitae presente ce que nous avons</p>
-                    <p>recu comme connaissance intellectuelle,</p>
-                    <p>ce que nous sommes capable de faire et</p>
-                    <p>ce que nous faisons déjà.</p>
+                    <h4>vous avez droit <br> d'apprendre</h4>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
+                         Delectus sequi laboriosam doloremque libero repellendus perferendis <br>
+                          error labore velit tempora, excepturi quidem possimus obcaecati vero architecto placeat <br>
+                           asperiores recusandae ex. Modi?</p>
                 </div>
             </section>
          </header>
@@ -51,15 +51,15 @@
                     <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Eos qui harum, aliquid mollitia illum laborum enim velit debitis, impedit eaque quisquam sit tenetur. Dolorum veniam sunt doloribus dolorem, dicta cumque.</p> <br>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus exercitationem, corrupti odio aliquid dolor suscipit? Quod et quae iste, rerum accusantium quasi optio ea debitis odio facere nostrum. Nobis, autem.</p><br>
                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Beatae quisquam ab eum inventore. In voluptatibus unde facere esse repellat atque quas earum laudantium rerum? Molestias culpa praesentium officiis corporis reiciendis. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique fugiat, tenetur nesciunt maxime illo dolorum omnis repudiandae est odio repellat, dolore quam tempora earum enim pariatur quod? Eum, natus ab?</p>
-                </div>
-                <div class="option">
-                    <h3>les options</h3>
-                    <ul>
-                        <li>Git et Github</li>
-                        <li>Html5</li>
-                        <li>CSS</li>
-                        <li>JavaScript</li>
-                    </ul>
+                    <div class="option">
+                        <h3>les options</h3>
+                        <ul>
+                            <li>Git et Github</li>
+                            <li>Html5</li>
+                            <li>CSS</li>
+                            <li>JavaScript</li>
+                        </ul>
+                    </div>
                 </div>
         </div>
         <footer>
