--- a/community.html
+++ b/community.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
             <section class="home">
-                <div class="left">
+                <div class="centre">
                     <h1>la puissance Communauté</h1>
                     <p>une grande Communauté des <br> développeurs du monde entier</p>
                     <button class="button-link">
@@ -34,8 +34,11 @@
         </header>
         <section class="home-comm">
             <div class="left">
-                <h4>Apprendre la programmation</h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia eaque cumque, a, velit natus hic fuga molestiae ullam culpa eveniet enim, voluptates ipsa itaque vero nesciunt nihil omnis maxime ut.</p>
+                <h4>Apprendre la <br> programmation</h4>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. <br>
+                    Delectus sequi laboriosam doloremque libero repellendus perferendis <br>
+                     error labore velit tempora, excepturi quidem possimus obcaecati vero architecto placeat <br>
+                      asperiores recusandae ex. Modi?</p>
             </div>
             <div class="right">
                 <img src="images/python-log.jpg">
