--- a/cours.html
+++ b/cours.html
@@ -26,63 +26,64 @@
 
          <!-- les cours -->
     
-    <section class="services">
-        <h1 class="title">Les Cours</h1>
-        <div class="list_cours">
-            <div class="cours">
-                <img src="images/github-logo.png" alt="">
-                <h4>Git et Github</h4>
-                <p>5 heures</p>
+    <div class="contener">
+        <section class="services">
+            <h1 class="title">Les Cours</h1>
+            <div class="list_cours">
+                <div class="cours">
+                    <img src="images/github-logo.png" alt="">
+                    <h4>Git et Github</h4>
+                    <p>5 heures</p>
+                </div>
+                <div class="cours">
+                    <img src="images/html-logo.png" alt="">
+                    <h4>HTML5</h4>
+                    <p>5 heures</p>
+                </div>
+                <div class="cours">
+                    <img src="images/css-logo.png" alt="">
+                    <h4>CSS3</h4>
+                    <p>5 heures</p>
+                </div>
             </div>
-            <div class="cours">
-                <img src="images/html-logo.png" alt="">
-                <h4>HTML5</h4>
-                <p>5 heures</p>
+        </section>
+        <section class="services">
+            <div class="list_cours">
+                <div class="cours">
+                    <img src="images/hub.png" alt="">
+                    <h4>flexbox</h4>
+                    <p>5 heures</p>
+                </div>
+                <div class="cours">
+                    <img src="images/respo.png" alt="">
+                    <h4>Responsive</h4>
+                    <p>5 heures</p>
+                </div>
+                <div class="cours">
+                    <img src="images/annim.png" alt="">
+                    <h4>Animations</h4>
+                    <p>5 heures</p>
+                </div>
+                </div>
             </div>
-            <div class="cours">
-                <img src="images/css-logo.png" alt="">
-                <h4>CSS3</h4>
-                <p>5 heures</p>
-            </div>
-            </div>
-        </div>
-    </section>
-    <section class="services">
-        <div class="list_cours">
-            <div class="cours">
-                <img src="images/hub.png" alt="">
-                <h4>flexbox</h4>
-                <p>5 heures</p>
-            </div>
-            <div class="cours">
-                <img src="images/respo.png" alt="">
-                <h4>Responsive</h4>
-                <p>5 heures</p>
-            </div>
-            <div class="cours">
-                <img src="images/annim.png" alt="">
-                <h4>Animations</h4>
-                <p>5 heures</p>
-            </div>
-            </div>
-        </div>
-    </section>
+        </section>
 
-    <section class="cours-abon">
-        <div class="left">
-            <h4>Abonnez vous à la boite <br> aux lettres</h4>
-            <p>Lorem ipsum dolor sit amet consectetur Eos adipisicing elit. <br> Officia eaque cumque, a, velit natus hic fuga molestiae ullam<br>culpa eveniet enim, voluptates ipsa itaque vero nesciunt <br>
-                 nihil omnis maxime ut.</p>
-        </div>
-        <div class="right">
-            <div class="form-cours">
-                <form>
-                    <input type="text" placeholder="Adresse emeil">
-                    <input type="submit" value="S'abonnez" id="btn-form">
-                </form>
+        <section class="cours-abon">
+            <div class="left">
+                <h4>Abonnez vous à la boite <br> aux lettres</h4>
+                <p>Lorem ipsum dolor sit amet consectetur Eos adipisicing elit. <br> Officia eaque cumque, a, velit natus hic fuga molestiae ullam<br>culpa eveniet enim, voluptates ipsa itaque vero nesciunt <br>
+                    nihil omnis maxime ut.</p>
             </div>
-        </div>
-    </section>
+            <div class="right">
+                <div class="form-cours">
+                    <form>
+                        <input type="text" placeholder="Adresse emeil">
+                        <input type="submit" value="S'abonnez" id="btn-form">
+                    </form>
+                </div>
+            </div>
+        </section>
+    </div>
     <footer>
         <p>Site réalisé par kit saison | Tous les droits sont réservés.</p>
     </footer>
