--- a/contact.html
+++ b/contact.html
@@ -26,30 +26,50 @@
         
         <div class="contener">
             <section class="contact">
-                <h1 class="title">Contactez nous</h1>
-                <div class="form-image">
+                <div class="rempli">
+                    <h1 class="title">Nous contacter</h1>
+                    <p>Remplissez ce formulaire pour nous laisser un message</p>
+                </div>
+                <div class="form-cont">
                     <form>
-                        <label for="contry-select">Nom</label>
-                        <input type="text" placeholder="Nom">
-                        <label for="contry-select">Pays</label>
-                        <select name="" id="">
-                            <option value="rdc">rdc</option>
-                            <option value="congo">congo</option>
-                            <option value="rdc">cameroun</option>
-                            <option value="congo">tanzanie</option>
-                            <option value="rdc">angola</option>
-                            <option value="congo">cote d'ivoire</option>
-
-                        </select>
-                        <label for="contry-select">Adresse e-mail</label>
-                        <input type="text" placeholder="Adresse Mail">
-                        <label for="contry-select">Objectif</label>
-                        <input type="text" placeholder="Objet du Message">
-                        <label for="contry-select">Message</label>
-                        <textarea  id="" cols="30" rows="10" placeholder="Votre Message"></textarea>
-                        <button class="button-link form_btn">
-                            <a href="#">Envoyer Votre message</a>
-                        </button>
+                        <div class="inp-cont">
+                            <div class="inpu">
+                                <label for="contry-select">Nom</label><br>
+                                <input type="text" placeholder="Nom">
+                            </div>
+                            <div class="inpu">
+                                <label for="contry-select">Pays</label>
+                                <select name="" id="">
+                                    <option value="rdc">rdc</option>
+                                    <option value="congo">congo</option>
+                                    <option value="rdc">cameroun</option>
+                                    <option value="congo">tanzanie</option>
+                                    <option value="rdc">angola</option>
+                                    <option value="congo">cote d'ivoire</option>
+                                </select>
+                            </div>
+                        </div>
+                        <div class="inp-cont">
+                            <div class="inpu">
+                                <label for="contry-select">Adresse e-mail</label>
+                                <input type="text" placeholder="Adresse Mail">
+                            </div>
+                            <div class="inpu">
+                                <label for="contry-select">Objectif</label>
+                                <input type="text" placeholder="Objet du Message">
+                            </div>
+                        </div>
+                            <div class="inpu">
+                                <label for="contry-select">Message</label>
+                            </div>
+                            <div class="inpu">
+                                <textarea  id="" cols="30" rows="10" placeholder="Votre Message"></textarea>
+                            </div>
+                            <div class="inpu">
+                                <button class="button-link form_btn">
+                                    <a href="#">Envoyer Votre message</a>
+                                </button>
+                            </div>
                     </form>
                 </div>
             </section>
