--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 </ul>
             </div>
             <section class="home">
-                <div class="left">
+                <div class="centre">
                     <h1>Bienvenue sur notre site</h1>
                     <p>nous vous apprenons à changer le</p>
                     <p>Monde avec votre créactivité</p>
